@@ -111,9 +111,9 @@
 		        "phase:2,deny,id:12345"
 	),
 	match_log => {
-		debug => [ qr/XML: Initialising parser.*XML: Parsing complete \(well_formed 0\).*XML parser error/s, 1 ],
-		-debug => [ qr/Failed to load/, 1 ],
-		-error => [ qr/Failed to load/, 1 ],
+		debug => [ qr/XML: Initialising parser.*XML: Parsing complete \(well_formed 0\).*XML parser error.*validation could not proceed due to previous processing errors/s, 1 ],
+		-debug => [ qr/Failed to load|Successfully validated/, 1 ],
+		-error => [ qr/Failed to load|Successfully validated/, 1 ],
 	},
 	match_response => {
 		status => qr/^403$/,
@@ -291,9 +291,9 @@
 		        "phase:2,deny,id:12345"
 	),
 	match_log => {
-		debug => [ qr/XML: Initialising parser.*XML: Parsing complete \(well_formed 0\).*XML parser error/s, 1 ],
-		-debug => [ qr/Failed to load/, 1 ],
-		-error => [ qr/Failed to load/, 1 ],
+		debug => [ qr/XML: Initialising parser.*XML: Parsing complete \(well_formed 0\).*XML parser error.*validation could not proceed due to previous processing errors/s, 1 ],
+		-debug => [ qr/Failed to load|Successfully validated/, 1 ],
+		-error => [ qr/Failed to load|Successfully validated/, 1 ],
 	},
 	match_response => {
 		status => qr/^403$/,
